deploy/dep-blog.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dep-blog
  labels: 
    app: blog
spec:
  replicas: 2
  selector:
    matchLabels:
      app: blog
  template:
    metadata:
      labels:
        app: blog
    spec:
      containers:
        - name: blog
          image: blog:v1.0.0
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              cpu: "10m"
