deploy/dep-lottery.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dep-lottery
  labels: 
    app: lottery
spec:
  replicas: 2
  selector:
    matchLabels:
      app: lottery
  template:
    metadata:
      labels:
        app: lottery
    spec:
      containers:
        - name: lottery
          image: lottery:v1.0.0
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              cpu: "10m"
