deploy/dep-search.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dep-search
  labels: 
    app: search
spec:
  replicas: 2
  selector:
    matchLabels:
      app: search
  template:
    metadata:
      labels:
        app: search
    spec:
      containers:
        - name: search
          image: search:v1.0.0
          imagePullPolicy: IfNotPresent
