deploy/svc-blog.yaml
apiVersion: v1
kind: Service

metadata:
  name: svc-blog

spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      protocol: TCP
  selector:
    app: blog
