deploy/svc-lottery.yaml
apiVersion: v1
kind: Service

metadata:
  name: svc-lottery

spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8081
      targetPort: 8081
      protocol: TCP
  selector:
    app: lottery
