deploy/svc-search.yaml
apiVersion: v1
kind: Service

metadata:
  name: svc-search

spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8082
      targetPort: 8082
      protocol: TCP
  selector:
    app: search
